# sec-chat

./: Cargo.toml
.sqlx/: query-6ab48bdc74c540a410a81d6e0c55b3e4e8050fb193d02ba7d3e73138e23fa108.json
client/: Cargo.toml
client/src/: main.rs
lib_sec/: Cargo.toml
lib_sec/src/: lib.rs
server/: Cargo.toml
server/schema/: 2024-10-13.sql
server/src/: main.rs
